--- a/ms.tex
+++ b/ms.tex
@@ -82,7 +82,7 @@
 
 % Title of the paper, and the short title which is used in the headers.
 % Keep the title short and informative.
-\title[SPIDERMAN]{SPIDERMAN: an open source code to model phase curves and secondary eclipses.}
+\title[SPIDERMAN]{TEST SPIDERMAN: an open source code to model phase curves and secondary eclipses.}
 
 % The list of authors, and the short list which is used in the headers.
 % If you need two or more lines of authors, add an extra line using \newauthor
